--- a/assignment/Form1.resx
+++ b/assignment/Form1.resx
@@ -117,33 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="BtnExit.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAABSRJREFUaEPt
-        mmvIn2Mcx5+dMTanjXnhxVixKENSxN7MKU2jWM0kbaRMq5HIGLExhJzS8sILh2hNElMo5bzN2HKMcuaN
-        Qwhzuny+9/296p7//z7/D3vxfOrTs+d3/X7XdV/P/7rv/3Xf90ZGGWUXJ4QwHc/Fe/AF/AJ/QfEP/oDb
-        8ElciSfiBJcPFw5kIl6AL6IOti7f4/14tLscLAw8Hi/FzzHyE27A5Xgy7uf0BH4fh7NwAa7Ft/BfFPr5
-        DM5xev9hsBNQSyTyBi7E3Z1SGWpm4o2oZSf+xgdwqlN6D52PxWvwLxQf4RlubgX9TMXVuAPFJ9j75Uan
-        Ohce0wigc+FmnOTmnkGfh+EmFL/hfDe1h840iefUM2gJzHNTX6B/jacLgNBSW+Sm5tCJltMT6hG+xiPc
-        1HcYS8tY/ImnO9wMOtC6Fd/hoQ4PDMa8Ohk9hF9xtsP1oFCXUJ0P+njnOjxwGPsRFG9jvS9QCrROP1A1
-        XOfwUGD8vfDj5EhCuNLhalCwIq0L7+PQtxEcw7zkaNItz3SHiyFxN/xGVVD6PUHOFGw8WWr3xbH+NRdy
-        nkax2qFiSLwozQ+bHcqFHH3s2i9txf0drgw1Z+MfeK9DuZBzHApthcp3ESS9nKSHsNihXMiZgO8k2SG8
-        i5UnQ64moUuruNzhQsh7NU0PCx3qDgkzUBu4n3Gyw4WQtzdqAyg+xIPclAs556OuhuIKh0sh9+K0JGxw
-        qDskaACx3qFKkF95MrQ1moQgX/c88Q+df17SGLcGlT7qLNSUToZY40lEqHsvLS/YVNIYz4+THKoFdbmT
-        4d+tJyGojV+Q+XswGr9Kc8rXeR7UdkwGs5NY4dRGUK/7F7HSoU5o1NZZTHSoEdRPw3jzpXuLeHVa5ZTG
-        0MeytKtwp0M7Q4NuRXUi7XCoFfSjyWgSkbVuagX9XJh2F9Y5tDM0jEF9/NoojnG4MfSx2P1FdEfZeMlG
-        6GNp0hsXJoc6oVHfmmJPhxpB/TkYl5MeNMRlpp/TnNYI6uM+8FaHOqEx7ngPd6g21GY/ieTE5mf2AtDq
-        k6H2rqSXEJY71AmNT6U54SyHakFdxyQi/K7JvJm0tJgMdc8mPRTdNdK4Ks0JaxyqDDW5k4gQbzUZ8nXr
-        rU2qmOFwJzTOTXPCJocqQX7pJCK0N54MuccmVZwCDnWHhEmoE16X4VkOF0Je9sS+3uFCyNOlWbtlUfkC
-        QN7tSUXed0gWktalueU3MOTor6v7CVFpEhHys5N52OFcyNEf+dskO4RjHM6HpHgD8yMWPrqkXV+iuoos
-        c6gW1GkyD2HpgzhyLkGxxaFySH4+rQk3ODRUOI498LPkiEJY4HA5JOuk0sn7O850eGhwDHGj+BrW23VQ
-        cF9SGsIrON7hgcPYx6MuJvrDHuVwdSjS05G46Su/SvQBxj0Q45Jqvswp1okfr0pXOTwQGE+vGvR0RuiG
-        r92qoIMzMX5P3I2lz6DawhgHox4Oii04xU3toKNFGCfzOPam4y7Qt16SfqmBYDs23mB2hQ5Pw7jN/xRP
-        dVNPoL/JeAvGN2Iv4T5u7i10fAhu1ihGu+X6V5IM1Osh3xKML1Z1Y3cTjnNKf2AAvdHVm9v46Whfpr+e
-        bkErPWAmT7vYObgG4zISr2P59qOXMKAePmffyEZ0kj6KekmjJ4NRvc6+DTfi/2v03nA+tr7FbgyD6+n9
-        ebge471CFfSgTbvZVkuzL3BQWjJHov4rx7V4Bz6IeneuE/kyPAUPcMkoo+zajIz8B3/78knKWPzTAAAA
-        AElFTkSuQmCC
-</value>
-  </data>
+  <metadata name="gunaElipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
